@@ -2,6 +2,7 @@ package com.example.application.domain1.login;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.logging.Logger;
 
 import com.example.application.domain1.DomainCookie;
@@ -13,7 +14,7 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
 /**
- * ログアウト
+ * ログインアプリ ログアウト
  */
 @WebServlet("/domain1/login/logout")
 public class LogoutServlet extends HttpServlet {
@@ -24,16 +25,16 @@ public class LogoutServlet extends HttpServlet {
     protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
         logger.info(LOG_PREFIX + "doGet start.");
 
-        // アプリケーションセッションを破棄
+        // ユーザーセッションを破棄
         Session.invalidate(req);
 
         // ドメインクッキーを破棄
         DomainCookie.SessionId.kill(req, resp);
 
-        String callbackUri = req.getContextPath() + "/domain1/login/auth";
-        String redirectUri = req.getContextPath() + "/domain1/idp/logout?redirect_uri="
-                + URLEncoder.encode(callbackUri, "UTF-8");
-        resp.sendRedirect(redirectUri);
+        String logout = req.getContextPath() + "/domain1/idp/logout";
+        String callback = req.getContextPath() + "/domain1/login/auth";
+        logout += "?callback=" + URLEncoder.encode(callback, StandardCharsets.UTF_8);
+        resp.sendRedirect(logout);
         return;
     }
 
